# vibe-rust

./: .gitignore  AGENTS.md  Cargo.toml  README.md  Taskfile.yml
benches/: audio.rs  dpm_solver.rs
data/text/: vibevoice_intro.txt
demo/: download_voices.sh
docs/rationale/: 0001_why_rust.md  0002_onnx_over_candle.md  0003_parallel_synthesis.md  0004_audio_crate_selection.md  0005_audio_quality_parity.md
examples/asr/: basic_transcribe.rs
examples/realtime/: basic_synthesis.rs  bilingual_long_demo.rs  korean_folktale.rs  multi_voice_demo.rs
examples/tts/: status.rs
scripts/: korean_folktale_onnx.py
src/: asr.rs  constants.rs  lib.rs  logging.rs  onnx_backend.rs  realtime.rs  tts.rs  utils.rs
src/onnx_backend/: config.rs  dpm_solver.rs  generate.rs  mod.rs  sessions.rs  voice.rs
tests/: integration_tests.rs
