[package]
name = "vibe-rust"
version = "0.2.2"
edition = "2024"
description = "Rust port of vibe-demo — hands-on exploration of Microsoft VibeVoice Voice AI models"
license = "MIT"

[dependencies]
anyhow = "1.0.102"
# Pinned to v2.0.0: rubato 1.0.1 depends on audioadapter v2 traits;
# v3 has incompatible Adapter/AdapterMut trait signatures.
audioadapter-buffers = "=2.0.0"
clap = { version = "4.6.0", features = ["derive"] }
half = "2.7.1"
hf-hub = "0.5.0"
hound = "3.5.1"
ndarray = "0.17.2"
ort = { version = "2.0.0-rc.12", features = ["half"] }
rand = "0.10.0"
rand_distr = "0.6.0"
rubato = "1.0.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
symphonia = { version = "0.5.5", features = ["wav", "pcm", "mp3"] }
thiserror = "2.0.18"
tokenizers = "0.22.2"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
zip = { version = "8.4.0", default-features = false, features = ["deflate"] }

[dev-dependencies]
criterion = { version = "0.8.2", features = ["html_reports"] }
rayon = "1.11.0"
tempfile = "3.27.0"

[[bench]]
name = "audio"
harness = false

[[bench]]
name = "dpm_solver"
harness = false

[[bin]]
name = "vibe-asr"
path = "src/bin/asr.rs"

[[bin]]
name = "vibe-tts"
path = "src/bin/tts.rs"

[[bin]]
name = "vibe-realtime"
path = "src/bin/realtime.rs"

[[example]]
name = "status"
path = "examples/tts/status.rs"

[[example]]
name = "basic_transcribe"
path = "examples/asr/basic_transcribe.rs"

[[example]]
name = "basic_synthesis"
path = "examples/realtime/basic_synthesis.rs"

[[example]]
name = "multi_voice_demo"
path = "examples/realtime/multi_voice_demo.rs"

[[example]]
name = "bilingual_long_demo"
path = "examples/realtime/bilingual_long_demo.rs"

[[example]]
name = "korean_folktale"
path = "examples/realtime/korean_folktale.rs"
